<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">cdgi_Hostel</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_admin_main_page">AdminMainPage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="forget_password_click_here">Forget password?Click here</string>
    <string name="login">Login</string>
    <string name="todo1" tools:ignore="DuplicateDefinition">TODO</string>
    <string name="register">Register</string>
    <string name="register_mess">Register for Mess Manager</string>
    <string name="eHostel">eHostel</string>
    <string name="ehostel2020_gmail_com">eHostel2020@gmail.com</string>
    <string name="menu_account">account</string>
    <string name="account">Account</string>
    <string name="title_activity_manager_main_page">ManagerMainPageActivity</string>
    <string name="title_activity_student">StudentActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="student_status">Student Status</string>
    <string name="edit">Edit</string>
    <string name="report1">Report</string>
    <string name="i_year">I Year</string>
    <string name="ii_year">II Year</string>
    <string name="iii_year">III Year</string>
    <string name="iv_year">IV Year</string>
    <string name="report">Report</string>
    <string name="first_year">First Year</string>
    <string name="second_year">Second Year</string>
    <string name="status">Status</string>
    <string name="manager_management">Manager Management</string>
    <string name="warden_management">Warden Management</string>
    <string name="three_seater">Three Seater</string>
    <string name="four_seater">Four Seater</string>
    <string name="five_seater">Five Seater</string>
    <string name="home">Home</string>
    <string name="what_s_in_menu">What\'s in menu</string>
    <string name="what_s_in_menu1">What\'s in menu</string>
    <string name="pass">Pass</string>
    <string name="gate_pass1">Gate Pass</string>
    <string name="leave_pass1">Leave Pass</string>
    <string name="gate_pass">Gate Pass</string>
    <string name="leave_pass">Leave Pass</string>
    <string name="add_Student">Add</string>
    <string name="add_student">Add Student</string>

</resources>