<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.mainpage.ui.pass.PassFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore = "UselessPrent">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >
            <TextView
                android:id="@+id/tvAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:gravity="center_horizontal"
                android:text="Pass"
                android:textAlignment="center"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageButton
                android:id="@+id/img_btn_gatePass"
                android:src="@drawable/admin"
                android:layout_width="300dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:layout_margin="10dp"
                app:srcCompat="@drawable/admin"
                tools:ignore="VectorDrawableCompat"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:hint="@string/gate_pass"
                android:textSize="30sp"
                android:textStyle="bold" />


            <ImageButton
                android:id="@+id/img_btn_leavePass"
                android:src="@drawable/admin"
                android:layout_width="300dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:layout_margin="10dp"
                app:srcCompat="@drawable/admin"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:hint="@string/leave_pass"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>