<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".manager.enter.ManagerLoginActivity">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="UselessParent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/cdgi_logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:src="@mipmap/cdgi_logo"
            android:contentDescription="@string/todo" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:gravity="left"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="left"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_manager_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/login"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:text="Forget password? "
            android:textSize="16sp"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:text="________________________"
                android:textSize="16sp"
                tools:ignore="HardcodedText" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginTop="5dp"
                android:text="OR"
                android:textSize="16sp"
                tools:ignore="HardcodedText" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:text="________________________"
                android:textSize="16sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>
        <Button
            android:id="@+id/btn_manager_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:gravity="center"
            android:text="Register for Manager"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

    </LinearLayout>
</ScrollView>

</LinearLayout>